log
Fri 12 Aug 2022 12:30:52 PM UTC: 
 exercises.c | 36 +++++++++++-------------------------
 1 file changed, 11 insertions(+), 25 deletions(-)
 tests:  0|7
total_score: 0/70
4c1108d
Fri 12 Aug 2022 12:33:05 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:16:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   16 |   c = a + b;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
00ccecb
Fri 12 Aug 2022 12:33:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
bf93335
Fri 12 Aug 2022 12:46:16 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:49:28: error: expected expression before ‘]’ token
   49 |   *suma = sumaN(arrayCopia[], m);
      |                            ^
exercises.c:42:7: error: variable ‘arrayCopia’ set but not used [-Werror=unused-but-set-variable]
   42 |   int arrayCopia[m];
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
77094b0
Fri 12 Aug 2022 12:46:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d05784e
Fri 12 Aug 2022 12:51:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
7822155
Fri 12 Aug 2022 12:56:44 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
a68ccce
Fri 12 Aug 2022 01:03:26 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
df36967
Fri 12 Aug 2022 01:06:16 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
4889cca
Fri 12 Aug 2022 01:06:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a44fbc4
Fri 12 Aug 2022 01:06:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4f4bd74
Fri 12 Aug 2022 01:12:08 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:22: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   91 |   Vector* arreglo = (vector *) calloc (n , sizeof(Vector));
      |                      ^~~~~~
      |                      Vector
exercises.c:91:22: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:91:30: error: expected expression before ‘)’ token
   91 |   Vector* arreglo = (vector *) calloc (n , sizeof(Vector));
      |                              ^
exercises.c:91:11: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   91 |   Vector* arreglo = (vector *) calloc (n , sizeof(Vector));
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
271d69a
Fri 12 Aug 2022 01:12:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:11: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   91 |   Vector* arreglo = (Vector *) calloc (n , sizeof(Vector));
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6d3ba0f
Fri 12 Aug 2022 01:12:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d0c2e59
Fri 12 Aug 2022 01:13:05 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:21: error: initialization of ‘Vector *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   91 |   Vector* arreglo = (int *) calloc (n , sizeof(Vector));
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
969b0de
Fri 12 Aug 2022 01:13:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f328ad0
Fri 12 Aug 2022 01:14:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:93:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   93 |   return *arreglo;
      |          ^~~~~~~~
exercises.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9dcf0fc
Fri 12 Aug 2022 01:14:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:93:10: error: returning ‘Vector **’ from a function with incompatible return type ‘Vector *’ [-Werror=incompatible-pointer-types]
   93 |   return &arreglo;
      |          ^~~~~~~~
exercises.c:93:10: error: function returns address of local variable [-Werror=return-local-addr]
cc1: all warnings being treated as errors
Compilation failed
e48bbc6
Fri 12 Aug 2022 01:14:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9bb294b
Fri 12 Aug 2022 01:16:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
de4405d
Fri 12 Aug 2022 01:16:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ff6e646
Fri 12 Aug 2022 01:17:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
67df1b8
Fri 12 Aug 2022 01:18:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
54afbe1
Fri 12 Aug 2022 01:20:31 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:92:13: error: incompatible types when assigning to type ‘Vector’ from type ‘Vector *’
   92 |   arreglo = (Vector *) calloc (n , sizeof(Vector));
      |             ^
exercises.c:94:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   94 |   return arreglo;
      |          ^~~~~~~
exercises.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c3d1227
Fri 12 Aug 2022 01:20:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:92:3: error: conversion to non-scalar type requested
   92 |   arreglo = (Vector ) calloc (n , sizeof(Vector));
      |   ^~~~~~~
exercises.c:94:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   94 |   return arreglo;
      |          ^~~~~~~
exercises.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6bb46c2
Fri 12 Aug 2022 01:21:06 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
9fdb733
Fri 12 Aug 2022 01:25:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:94:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   94 |   return *arreglo;
      |          ^~~~~~~~
exercises.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5bc33a7
Fri 12 Aug 2022 01:26:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:92:14: error: incompatible types when assigning to type ‘Vector’ from type ‘Vector *’
   92 |   *arreglo = (Vector *) calloc (n , sizeof(Vector));
      |              ^
Compilation failed
d99c0be
Fri 12 Aug 2022 01:28:25 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:96:15: error: invalid type argument of ‘->’ (have ‘Vector’)
   96 |     arreglo[i]->datos = 0;
      |               ^~
Compilation failed
c9ec356
